# tinylabels

./: CMakeLists.txt  README.md
native/mytests/: CMakeLists.txt  batchselect.cpp  batchselect.h  benchmark.cpp  dec.cpp  enc1.cpp  enc2.cpp  gen_samples.cpp  keygen.cpp  mytests.cpp  mytests.h  setup.cpp
native/src/seal/: batchencoder.cpp  context.cpp  encryptionparams.h
native/src/seal/util/: ntt.cpp  ntt.h  polyarithsmallmod.cpp  polyarithsmallmod.h  rns.cpp  rns.h
native/tinylabels/: CMakeLists.txt  batchselect.h  gen_samples.cpp  keygen.cpp  setup.cpp
